--- a/package.json
+++ b/package.json
@@ -14,11 +14,24 @@
         "daisyui": "^4.7.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
+        "sass": "^1.71.1",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.4.21"
     },
     "dependencies": {
+        "@tabler/icons-webfont": "^2.47.0",
+        "boxicons": "^2.1.4",
+        "dropzone": "^6.0.0-beta.2",
+        "flag-icon-css": "^4.1.7",
+        "flag-icons": "^7.2.0",
+        "flatpickr": "^4.6.13",
+        "quill": "^1.3.6",
+        "simplebar": "^6.2.5",
+        "spinkit": "^2.0.1",
+        "swiper": "^11.0.7",
+        "tippy.js": "^6.3.7",
+        "tom-select": "^2.3.1",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.0"
     }
